Correction for navigation not including sub - missing border - Fix for missing border on top level nav

--- a/src/less/corporate-ui/navigation.less
+++ b/src/less/corporate-ui/navigation.less
@@ -88,6 +88,7 @@
 
   .navbar-collapse {
     position: relative;
+    border-bottom: 1px solid #d3d3d3;
 
     .active {
 
@@ -333,9 +334,6 @@ ul.nav-tabs {
 }
 .sub-level() {
   background-color: #f3f3f3;
-  border-color: #d3d3d3;
-  border-width: 1px 0;
-  border-style: solid;
 
   a {
     font-family: "Scania Sans";
